--- a/paper.tex
+++ b/paper.tex
@@ -51,9 +51,9 @@ compete for the new unit.
 In addition to the above problem, the afore-mentioned process of
 allotment is severely sequential and we believe that there is
 parallelism that can be exploited similar to instruction-level
-parallelism in computer processors. Notice that after step (iii) the
-procedure of allotment of the unit that is to be vacated soon by the
-allottee can be initiated.
+parallelism in computer processors. Notice that after step (iii),
+procedure of allotment of the unit, which is to be vacated soon by the
+allottee, can be initiated.
 
 
 
